FARRAGO: Default PermGen size should be bigger for dist packages (LDB-212)
[git-p4: depot-paths = "//open/dy/dev/": change = 13682]